--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "first-ts-app",
+  "homepage": "https://Starchild-1337.github.io/static-job-list",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,11 +13,15 @@
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.7",
+    "@types/styled-components": "^5.1.28",
+    "sass": "^1.68.0"
   }
 }
